--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,4 +1,7 @@
 <h2>Reporter output</h2><table><tr><td>Value for Key 'locationID' found from sheet =LOC@0004</td></tr>
+<tr><td>Value for Key 'locationID3' found from sheet =AUTOLOC001</td></tr>
+<tr><td>Value for Key 'locationID4' found from sheet =STATEMENTS001</td></tr>
+<tr><td>Value for Key 'locationID' found from sheet =LOC@0004</td></tr>
 <tr><td>Value for Key 'locationID2' found from sheet =LOC@0005</td></tr>
 <tr><td>Value for Key 'defaultCustomer' found from sheet =Mr. VACANT VACANT</td></tr>
 <tr><td>Value for Key 'requestedbY' found from sheet =Mr. Automation Mate</td></tr>
@@ -15,69 +18,127 @@
 <tr><td>Value for Key 'message' found from sheet =Transfer initiated</td></tr>
 <tr><td>Launching Chrome</td></tr>
 <tr><td>Browser Maximised</td></tr>
+<tr><td>Deleting Records for ServiceOrder = SORD00000004216</td></tr>
+<tr><td>Deleting Records for Location =  LOC@0004</td></tr>
 <tr><td>Deleting Records for ServiceOrder = </td></tr>
-<tr><td>Angular Request Completed in 46ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: username] displayed in 78ms</td></tr>
+<tr><td>Deleting Records for ServiceOrder = </td></tr>
+<tr><td>Deleting Records for ServiceOrder = </td></tr>
+<tr><td>Angular Request Completed in 45ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: username] displayed in 79ms</td></tr>
 <tr><td>Login Page title Verified</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: username] displayed in 28ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: password] displayed in 37ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: kc-login] displayed in 37ms</td></tr>
-<tr><td>Angular Request Completed in 31ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: username] displayed in 24ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: password] displayed in 32ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: kc-login] displayed in 35ms</td></tr>
+<tr><td>Angular Request Completed in 15ms</td></tr>
 <tr><td>User signed Admin</td></tr>
 <tr><td>Enter Text for Search =LOC@0004</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: SRCH_Input] displayed in 56ms</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: SRCH_Option_1_Address_Line] displayed in 698ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: SRCH_Input] displayed in 68ms</td></tr>
+<tr><td>Angular request time 11ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: SRCH_Option_1_Address_Line] displayed in 657ms</td></tr>
 <tr><td>Click Customer</td></tr>
-<tr><td>Angular request time 497ms</td></tr>
-<tr><td>Angular request time 12ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: 'LOC_Location_Id'] displayed in 45ms</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
+<tr><td>Angular request time 237ms</td></tr>
+<tr><td>Angular request time 9ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: 'LOC_Location_Id'] displayed in 55ms</td></tr>
+<tr><td>Angular request time 11ms</td></tr>
 <tr><td>got Text CustomerLocId = LOC@0004</td></tr>
 <tr><td>Customer Location Id found LOC@0004</td></tr>
 <tr><td>Strings Matched: LOC@0004 = LOC@0004</td></tr>
 <tr><td>Click Action Dropdown</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: ACTION_Button] displayed in 51ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: ACTION_Button] displayed in 24ms</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: ACTION_Button] displayed in 42ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: ACTION_Button] displayed in 21ms</td></tr>
+<tr><td>Angular request time 9ms</td></tr>
 <tr><td>Click Action Drop down</td></tr>
-<tr><td>Angular request time 11ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: ACTION_Transfer_Service] displayed in 45ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: ACTION_Transfer_Service] displayed in 37ms</td></tr>
-<tr><td>Angular request time 32ms</td></tr>
-<tr><td>Click Action Transfer Service Drop down</td></tr>
-<tr><td>Angular request time 9ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: XFER_Select] displayed in 46ms</td></tr>
-<tr><td>Angular request time 11ms</td></tr>
-<tr><td>Click Transfer Combo</td></tr>
 <tr><td>Angular request time 12ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: XFER_Select_Option_3] displayed in 57ms</td></tr>
-<tr><td>Angular request time 9ms</td></tr>
-<tr><td>Click Transfer Option 3</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: ACTION_Transfer_Service] displayed in 47ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: ACTION_Transfer_Service] displayed in 65ms</td></tr>
+<tr><td>Angular request time 27ms</td></tr>
+<tr><td>Click Action Transfer Service Drop down</td></tr>
+<tr><td>Angular request time 11ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Select] displayed in 54ms</td></tr>
 <tr><td>Angular request time 8ms</td></tr>
+<tr><td>Click Transfer Combo</td></tr>
+<tr><td>Angular request time 14ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Select_Option_2] displayed in 62ms</td></tr>
+<tr><td>Angular request time 10ms</td></tr>
+<tr><td>Click Transfer Option 2</td></tr>
+<tr><td>Angular request time 8ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Date_Picker_Requested] displayed in 45ms</td></tr>
+<tr><td>Entered Request Date = 11/29/2019 01:00</td></tr>
+<tr><td>Submit Transfer Request</td></tr>
 <tr><td>TRANSFER</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: CLO_Service_Order_Input] displayed in 44ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: CLO_Service_Order_Input] displayed in 47ms</td></tr>
 <tr><td>Setting Text on Search Request with Text = TRANSFER</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: XFER_Date_Picker_Requested] displayed in 48ms</td></tr>
-<tr><td>Entered Request Date = 11/28/2019 11:55</td></tr>
-<tr><td>Strings Matched: Mr. VACANT VACANT = Mr. VACANT VACANT</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: XFER_Search_Input] displayed in 44ms</td></tr>
-<tr><td>Setting Text on Customer Name Request with Text = Mr. VACANT VACANT</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: XFER_Search_Option_1] displayed in 593ms</td></tr>
-<tr><td>Angular request time 13ms</td></tr>
+<tr><td>Angular request time 7ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: CLO_Service_Order_Option_1_Request_Id] displayed in 591ms</td></tr>
+<tr><td>Angular request time 14ms</td></tr>
 <tr><td>Click XFER_Search_Option_1_Customer_Name</td></tr>
+<tr><td>Angular request time 11ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Date_Picker_Scheduled] displayed in 59ms</td></tr>
+<tr><td>Enter Schedule Date Date</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Date_Picker_Scheduled] displayed in 37ms</td></tr>
+<tr><td>Setting Text on DatePicket with Text = 11/29/2019 01:00</td></tr>
+<tr><td>Angular request time 2ms</td></tr>
+<tr><td>Strings Matched: Mr. VACANT VACANT = Mr. VACANT VACANT</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Search_Input] displayed in 44ms</td></tr>
+<tr><td>Setting Text on Customer Name Request with Text = Mr. VACANT VACANT</td></tr>
 <tr><td>Angular request time 9ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: XFER_Description] displayed in 45ms</td></tr>
-<tr><td>Setting Text on Description Request with Text = AUTOMATION TEST</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>Click Submit</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: XFER_Button_Action] displayed in 43ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1dd2e6bcea09a2489ef0af1ea576efdf)] -> id: XFER_Button_Action] displayed in 35ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Search_Option_1] displayed in 593ms</td></tr>
 <tr><td>Angular request time 10ms</td></tr>
-<tr><td>Click MoveInSubmit Button</td></tr>
+<tr><td>Click XFER_Search_Option_1_Customer_Name</td></tr>
+<tr><td>Angular request time 7ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Description] displayed in 45ms</td></tr>
+<tr><td>Setting Text on Description Request with Text = Description for Start Service</td></tr>
 <tr><td>Angular request time 9ms</td></tr>
+<tr><td>Click Submit</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Button_Action] displayed in 43ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Button_Action] displayed in 36ms</td></tr>
+<tr><td>Angular request time 11ms</td></tr>
+<tr><td>Click MoveInSubmit Button</td></tr>
+<tr><td>Angular request time 16ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Button_Done] displayed in 84ms</td></tr>
+<tr><td>Angular request time 27ms</td></tr>
+<tr><td>Click Done Button for Transfer</td></tr>
+<tr><td>Angular request time 10ms</td></tr>
+<tr><td>Clicking Servic Order Link</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> css selector: #mat-tab-label-0-2 > div] displayed in 48ms</td></tr>
+<tr><td>Angular request time 12ms</td></tr>
+<tr><td>Click Service Order Link</td></tr>
+<tr><td>Angular request time 13ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: SOLV_Service_Order_1] displayed in 551ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: SOLV_Service_Order_1] displayed in 46ms</td></tr>
+<tr><td>Angular request time 7ms</td></tr>
+<tr><td>Click Clicking Service Order 1</td></tr>
+<tr><td>Angular request time 8ms</td></tr>
+<tr><td>Angular request time 9ms</td></tr>
+<tr><td>Capturing Servic Order Number</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: SODV_Service_Order_Id] displayed in 41ms</td></tr>
+<tr><td>Angular request time 13ms</td></tr>
+<tr><td>got Text Service Order Number = SORD00000004217</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: ACTION_Refresh_Page] displayed in 87ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: ACTION_Refresh_Page] displayed in 34ms</td></tr>
+<tr><td>Angular request time 73ms</td></tr>
+<tr><td>Click Refresh Button</td></tr>
+<tr><td>Angular request time 8ms</td></tr>
+<tr><td>Refresh Page</td></tr>
+<tr><td>Click Action Dropdown</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: ACTION_Button] displayed in 38ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: ACTION_Button] displayed in 31ms</td></tr>
+<tr><td>Angular request time 9ms</td></tr>
+<tr><td>Click Action Drop down</td></tr>
+<tr><td>Angular request time 8ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: ACTION_Transfer_Service] displayed in 41ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: ACTION_Transfer_Service] displayed in 62ms</td></tr>
+<tr><td>Angular request time 27ms</td></tr>
+<tr><td>Click Action Transfer Service Drop down</td></tr>
+<tr><td>Angular request time 10ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Select] displayed in 56ms</td></tr>
+<tr><td>Angular request time 10ms</td></tr>
+<tr><td>Click Transfer Combo</td></tr>
+<tr><td>Angular request time 17ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (72e2b1175599fe82beac1b24c4349105)] -> id: XFER_Select_Option_2] displayed in 63ms</td></tr>
+<tr><td>Angular request time 19ms</td></tr>
+<tr><td>Click Transfer Option 2</td></tr>
+<tr><td>Angular request time 21ms</td></tr>
 <tr><td>Closing Browser</td></tr>
 <tr><td>Test Completed...</td></tr>
 </table>
