--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Administrator\AppData\Local\Temp\1\testng-eclipse-848906485\testng-customsuite.xml</span>
+                    <span>C:\Users\Administrator\AppData\Local\Temp\1\testng-eclipse-916662889\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Administrator\AppData\Local\Temp\1\testng-eclipse-848906485\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Administrator\AppData\Local\Temp\1\testng-eclipse-916662889\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,12 +188,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TestSearchAccount')
 data.setCell(0, 2, 'com.NexusPortalAutomation.TestCases.Java.TC0009_1_VerifyAccountSearch_NoAccounts')
-data.setCell(0, 3, 9729);
+data.setCell(0, 3, 10228);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -207,40 +207,41 @@ return data;
             <div class="reporter-method-div">
               <span class="reporter-method-name">TestSearchAccount</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Angular Request Completed in 45ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: username] displayed in 74ms</span>
+                <span class="reporter-method-output">Deleting Records for ServiceOrder = </span>
+                <span class="reporter-method-output">Angular Request Completed in 41ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: username] displayed in 72ms</span>
                 <span class="reporter-method-output">Login Page title Verified</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: username] displayed in 28ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: password] displayed in 35ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: kc-login] displayed in 32ms</span>
-                <span class="reporter-method-output">Angular Request Completed in 18ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: username] displayed in 25ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: password] displayed in 35ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: kc-login] displayed in 34ms</span>
+                <span class="reporter-method-output">Angular Request Completed in 19ms</span>
                 <span class="reporter-method-output">User signed Admin</span>
                 <span class="reporter-method-output">Enter Text for Search =SINGLECUST01</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: SRCH_Input] displayed in 65ms</span>
-                <span class="reporter-method-output">Angular request time 10ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: SRCH_Option_1_Address_Line] displayed in 597ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: SRCH_Input] displayed in 52ms</span>
+                <span class="reporter-method-output">Angular request time 8ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: SRCH_Option_1_Address_Line] displayed in 613ms</span>
                 <span class="reporter-method-output">Click Customer</span>
-                <span class="reporter-method-output">Angular request time 210ms</span>
-                <span class="reporter-method-output">Angular request time 17ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: CUST_Customer_Id] displayed in 33ms</span>
-                <span class="reporter-method-output">Angular request time 11ms</span>
+                <span class="reporter-method-output">Angular request time 185ms</span>
+                <span class="reporter-method-output">Angular request time 8ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: CUST_Customer_Id] displayed in 34ms</span>
+                <span class="reporter-method-output">Angular request time 9ms</span>
                 <span class="reporter-method-output">got Text Customer Id = SINGLECUST01</span>
                 <span class="reporter-method-output">CustomerId found SINGLECUST01</span>
                 <span class="reporter-method-output">Strings Matched: SINGLECUST01 = SINGLECUST01</span>
                 <span class="reporter-method-output">Strings Matched: No Other Accounts = No Other Accounts</span>
                 <span class="reporter-method-output">Angular request time 10ms</span>
-                <span class="reporter-method-output">Angular request time 7ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: USR_Name] displayed in 52ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: USR_Name] displayed in 45ms</span>
-                <span class="reporter-method-output">Angular request time 10ms</span>
+                <span class="reporter-method-output">Angular request time 9ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: USR_Name] displayed in 38ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: USR_Name] displayed in 36ms</span>
+                <span class="reporter-method-output">Angular request time 11ms</span>
                 <span class="reporter-method-output">Click Logged User Link</span>
+                <span class="reporter-method-output">Angular request time 10ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: ACTION_Logout] displayed in 46ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: ACTION_Logout] displayed in 37ms</span>
                 <span class="reporter-method-output">Angular request time 13ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: ACTION_Logout] displayed in 55ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: ACTION_Logout] displayed in 62ms</span>
-                <span class="reporter-method-output">Angular request time 14ms</span>
                 <span class="reporter-method-output">Click logout Link</span>
-                <span class="reporter-method-output">Angular request time 6ms</span>
-                <span class="reporter-method-output">Angular request time 15ms</span>
+                <span class="reporter-method-output">Angular request time 9ms</span>
+                <span class="reporter-method-output">Angular request time 10ms</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -260,16 +261,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.NexusPortalAutomation.TestCases.Java.TC0009_1_VerifyAccountSearch_NoAccounts</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">readProp(org.testng.TestRunner@7555b920)</span>
+                <span class="method-name">readProp(org.testng.TestRunner@4943defe)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">TestSearchAccount</span>
-                <span class="method-start">3781 ms</span>
+                <span class="method-start">3671 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">13511 ms</span>
+                <span class="method-start">13900 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
