--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,39 +1,40 @@
 <h2>Reporter output</h2><table><tr><td>Launching Chrome</td></tr>
 <tr><td>Browser Maximised</td></tr>
-<tr><td>Angular Request Completed in 45ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: username] displayed in 74ms</td></tr>
+<tr><td>Deleting Records for ServiceOrder = </td></tr>
+<tr><td>Angular Request Completed in 41ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: username] displayed in 72ms</td></tr>
 <tr><td>Login Page title Verified</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: username] displayed in 28ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: password] displayed in 35ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: kc-login] displayed in 32ms</td></tr>
-<tr><td>Angular Request Completed in 18ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: username] displayed in 25ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: password] displayed in 35ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: kc-login] displayed in 34ms</td></tr>
+<tr><td>Angular Request Completed in 19ms</td></tr>
 <tr><td>User signed Admin</td></tr>
 <tr><td>Enter Text for Search =SINGLECUST01</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: SRCH_Input] displayed in 65ms</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: SRCH_Option_1_Address_Line] displayed in 597ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: SRCH_Input] displayed in 52ms</td></tr>
+<tr><td>Angular request time 8ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: SRCH_Option_1_Address_Line] displayed in 613ms</td></tr>
 <tr><td>Click Customer</td></tr>
-<tr><td>Angular request time 210ms</td></tr>
-<tr><td>Angular request time 17ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: CUST_Customer_Id] displayed in 33ms</td></tr>
-<tr><td>Angular request time 11ms</td></tr>
+<tr><td>Angular request time 185ms</td></tr>
+<tr><td>Angular request time 8ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: CUST_Customer_Id] displayed in 34ms</td></tr>
+<tr><td>Angular request time 9ms</td></tr>
 <tr><td>got Text Customer Id = SINGLECUST01</td></tr>
 <tr><td>CustomerId found SINGLECUST01</td></tr>
 <tr><td>Strings Matched: SINGLECUST01 = SINGLECUST01</td></tr>
 <tr><td>Strings Matched: No Other Accounts = No Other Accounts</td></tr>
 <tr><td>Angular request time 10ms</td></tr>
-<tr><td>Angular request time 7ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: USR_Name] displayed in 52ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: USR_Name] displayed in 45ms</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
+<tr><td>Angular request time 9ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: USR_Name] displayed in 38ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: USR_Name] displayed in 36ms</td></tr>
+<tr><td>Angular request time 11ms</td></tr>
 <tr><td>Click Logged User Link</td></tr>
+<tr><td>Angular request time 10ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: ACTION_Logout] displayed in 46ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: ACTION_Logout] displayed in 37ms</td></tr>
 <tr><td>Angular request time 13ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: ACTION_Logout] displayed in 55ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (a56e5b1d1d54be97085b22a0268e0d68)] -> id: ACTION_Logout] displayed in 62ms</td></tr>
-<tr><td>Angular request time 14ms</td></tr>
 <tr><td>Click logout Link</td></tr>
-<tr><td>Angular request time 6ms</td></tr>
-<tr><td>Angular request time 15ms</td></tr>
+<tr><td>Angular request time 9ms</td></tr>
+<tr><td>Angular request time 10ms</td></tr>
 <tr><td>Closing Browser</td></tr>
 <tr><td>Test Completed...</td></tr>
 </table>
