--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,40 +1,64 @@
-<h2>Reporter output</h2><table><tr><td>Launching Chrome</td></tr>
+<h2>Reporter output</h2><table><tr><td>Value for Key 'drillbackLoc' found from sheet =LOC@0004</td></tr>
+<tr><td>Value for Key 'loc1' found from sheet =LOC@0001</td></tr>
+<tr><td>Value for Key 'drillbackCustId' found from sheet =0000011111</td></tr>
+<tr><td>Launching Chrome</td></tr>
 <tr><td>Browser Maximised</td></tr>
-<tr><td>Deleting Records for ServiceOrder = </td></tr>
-<tr><td>Angular Request Completed in 41ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: username] displayed in 72ms</td></tr>
+<tr><td>Angular Request Completed in 49ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: username] displayed in 73ms</td></tr>
 <tr><td>Login Page title Verified</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: username] displayed in 25ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: password] displayed in 35ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: kc-login] displayed in 34ms</td></tr>
-<tr><td>Angular Request Completed in 19ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: username] displayed in 21ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: password] displayed in 32ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: kc-login] displayed in 313ms</td></tr>
+<tr><td>Angular Request Completed in 13ms</td></tr>
 <tr><td>User signed Admin</td></tr>
-<tr><td>Enter Text for Search =SINGLECUST01</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: SRCH_Input] displayed in 52ms</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: SRCH_Option_1_Address_Line] displayed in 613ms</td></tr>
+<tr><td>Enter Text for Search =LOC@0004</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: SRCH_Input] displayed in 55ms</td></tr>
+<tr><td>Angular request time 10ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: SRCH_Option_1_Address_Line] displayed in 836ms</td></tr>
 <tr><td>Click Customer</td></tr>
-<tr><td>Angular request time 185ms</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: CUST_Customer_Id] displayed in 34ms</td></tr>
-<tr><td>Angular request time 9ms</td></tr>
-<tr><td>got Text Customer Id = SINGLECUST01</td></tr>
-<tr><td>CustomerId found SINGLECUST01</td></tr>
-<tr><td>Strings Matched: SINGLECUST01 = SINGLECUST01</td></tr>
-<tr><td>Strings Matched: No Other Accounts = No Other Accounts</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
-<tr><td>Angular request time 9ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: USR_Name] displayed in 38ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: USR_Name] displayed in 36ms</td></tr>
+<tr><td>Angular request time 463ms</td></tr>
+<tr><td>Angular request time 12ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: 'LOC_Location_Id'] displayed in 45ms</td></tr>
 <tr><td>Angular request time 11ms</td></tr>
-<tr><td>Click Logged User Link</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: ACTION_Logout] displayed in 46ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (f066d0f113d9e997f2f802c52f76f831)] -> id: ACTION_Logout] displayed in 37ms</td></tr>
-<tr><td>Angular request time 13ms</td></tr>
-<tr><td>Click logout Link</td></tr>
+<tr><td>got Text CustomerLocId = LOC@0004</td></tr>
+<tr><td>Customer Location Id found LOC@0004</td></tr>
+<tr><td>Strings Matched: LOC@0004 = LOC@0004</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACTION_Drillback] displayed in 39ms</td></tr>
+<tr><td>Strings Matched: cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=229&Act=OPEN&Func=CustomerMaintenance&CustomerID=0000011111&LocationID=LOC@0004&CogsDrillback=1 = cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=229&Act=OPEN&Func=CustomerMaintenance&CustomerID=0000011111&LocationID=LOC@0004&CogsDrillback=1</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACCIT_1_Description] displayed in 37ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACCIT_1_Drillback] displayed in 41ms</td></tr>
+<tr><td>Strings Matched: cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=229&Act=OPEN&Func=ServiceOrder&CustomerID=0000011111&LocationID=LOC@0004&ServiceOrder=1&CogsDrillback=1 = cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=229&Act=OPEN&Func=ServiceOrder&CustomerID=0000011111&LocationID=LOC@0004&ServiceOrder=1&CogsDrillback=1</td></tr>
+<tr><td>Click Action Dropdown</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACTION_Button] displayed in 35ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACTION_Button] displayed in 19ms</td></tr>
+<tr><td>Angular request time 19ms</td></tr>
+<tr><td>Click Action Drop down</td></tr>
+<tr><td>Angular request time 7ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACTION_Cashiering] displayed in 26ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACTION_Credit_Memo] displayed in 21ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACTION_Deposit] displayed in 22ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACTION_Misc._Charge] displayed in 21ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACTION_Payment_Arrangement] displayed in 21ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACTION_Payment_Extension] displayed in 23ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACTION_Void] displayed in 21ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACTION_Contact_Log] displayed in 20ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: ACTION_Meter_Reading] displayed in 18ms</td></tr>
+<tr><td>Verify Action Drillbacks</td></tr>
+<tr><td>Verifying Drill back for cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=229&Act=OPEN&Func=SecondaryCustomer&LocationID=LOC@0004&CustomerID=0000011111&Address=1  Water ALY  BLDG 1 NEW SMYRNA  BEACH FL 123123&CustName=Mr. Auto Contact&CogsDrillback=1</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: SCUST_Drillback] displayed in 25ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: SRCH_Input] displayed in 29ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: SRCH_Input] displayed in 20ms</td></tr>
+<tr><td>Setting Text on Search Text with Text = LOC@0001</td></tr>
 <tr><td>Angular request time 9ms</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
+<tr><td>Search Text</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: SRCH_Option_2_Customer_Name] displayed in 651ms</td></tr>
+<tr><td>Click DashBoard Search Result </td></tr>
+<tr><td>Angular request time 135ms</td></tr>
+<tr><td>Verifying Drill back for cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=229&Act=OPEN&Func=LocationAccountServices&CustomerID=DRILBACK&LocationID=LOC@0001&CogsDrillback=1</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: SERV_Tab_Drillback] displayed in 22ms</td></tr>
+<tr><td>Verifying Drill back for cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=0&Act=OPEN&Func=EnhansedNote&NoteID=DRILBACK&NoteIndex=49.00000&CogsDrillback=1</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (c9d891273af0fc18668ee4c8b136cc4b)] -> id: customer-person] displayed in 18ms</td></tr>
+<tr><td>Verifying Drill back for cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=0&Act=OPEN&Func=EnhansedNote&NoteID=LOC@0001&NoteIndex=52.00000&CogsDrillback=1</td></tr>
 <tr><td>Closing Browser</td></tr>
 <tr><td>Test Completed...</td></tr>
 </table>
