--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7cd7a0">  <td>19/12/04 11:40:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.readProp(org.testng.ITestContext)[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0009_1_VerifyAccountSearch_NoAccounts@65fb9ffc]">&gt;&gt;readProp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@396283472</td>   <td></td> </tr>
-<tr bgcolor="77a679">  <td>19/12/04 11:41:03</td>   <td>3665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0009_1_VerifyAccountSearch_NoAccounts.TestSearchAccount()[pri:1, instance:com.NexusPortalAutomation.TestCases.Java.TC0009_1_VerifyAccountSearch_NoAccounts@65fb9ffc]">TestSearchAccount</td> 
-  <td>main@396283472</td>   <td></td> </tr>
-<tr bgcolor="7cd7a0">  <td>19/12/04 11:41:13</td>   <td>13894</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0009_1_VerifyAccountSearch_NoAccounts@65fb9ffc]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@396283472</td>   <td></td> </tr>
+<tr bgcolor="7161c7">  <td>20/01/02 12:42:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.readProp(org.testng.ITestContext)[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0018_verifyDrillbacksGeneral@f5958c9]">&gt;&gt;readProp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@769798433</td>   <td></td> </tr>
+<tr bgcolor="77a679">  <td>20/01/02 12:42:56</td>   <td>3910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0018_verifyDrillbacksGeneral.verifyDrillbacksGeneral()[pri:1, instance:com.NexusPortalAutomation.TestCases.Java.TC0018_verifyDrillbacksGeneral@f5958c9]">verifyDrillbacksGeneral</td> 
+  <td>main@769798433</td>   <td></td> </tr>
+<tr bgcolor="7161c7">  <td>20/01/02 12:43:23</td>   <td>30429</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0018_verifyDrillbacksGeneral@f5958c9]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@769798433</td>   <td></td> </tr>
 </table>
